--- a/app/src/main/res/layout/fragment_trailer_list.xml
+++ b/app/src/main/res/layout/fragment_trailer_list.xml
@@ -5,16 +5,12 @@
     android:layout_height="match_parent"
     tools:context="za.co.mikhails.nanodegree.popularmovies.MovieListFragment">
 
-    <GridView
-        android:id="@+id/gridview"
+    <ListView
+        android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="@dimen/poster_width"
         android:gravity="center"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:horizontalSpacing="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp" />
+        android:layout_margin="16dp"
+        android:transcriptMode="disabled"/>
 
 </FrameLayout>
