--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -10,13 +10,44 @@
         android:layout_width="120dp"
         android:layout_height="90dp"
         android:scaleType="fitXY"
-        android:src="@mipmap/ic_movie"/>
+        android:src="@mipmap/ic_movie" />
 
-    <TextView
-        android:id="@+id/list_item_text"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginLeft="16dp"/>
+        android:layout_gravity="left|top"
+        android:layout_marginLeft="16dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/list_item_size"
+                style="?android:attr/textAppearanceSmallInverse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/bright_foreground_inverse_material_dark"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
+                android:layout_marginRight="5dp"/>
+
+            <TextView
+                android:id="@+id/list_item_type"
+                style="?android:attr/textAppearanceMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/list_item_name"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </LinearLayout>
