--- a/app/src/main/res/values/tags.xml
+++ b/app/src/main/res/values/tags.xml
@@ -3,7 +3,9 @@
     <item name="MOVIE_ID" type="id" />
     <item name="LIST_ITEM_ICON" type="id" />
     <item name="TRAILER_ID" type="id" />
-    <item name="LIST_ITEM_TRAILER" type="id" />
+    <item name="LIST_ITEM_TYPE" type="id" />
+    <item name="LIST_ITEM_NAME" type="id" />
+    <item name="LIST_ITEM_SIZE" type="id" />
     <item name="LIST_ITEM_THUMBNAIL" type="id" />
     <item name="TRAILER_KEY" type="id" />
 </resources>
