--- a/app/src/main/res/layout/list_row_trailer.xml
+++ b/app/src/main/res/layout/list_row_trailer.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/list_item_thumbnail"
+        android:id="@+id/thumbnail"
         android:layout_width="120dp"
         android:layout_height="90dp"
         android:scaleType="fitXY"
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/list_item_size"
+                android:id="@+id/size"
                 style="?android:attr/textAppearanceSmallInverse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
                 android:layout_marginRight="5dp"/>
 
             <TextView
-                android:id="@+id/list_item_type"
+                android:id="@+id/type"
                 style="?android:attr/textAppearanceMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -43,7 +43,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/list_item_name"
+            android:id="@+id/name"
             style="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
