--- a/app/src/main/res/values/tags.xml
+++ b/app/src/main/res/values/tags.xml
@@ -2,10 +2,18 @@
 <resources>
     <item name="MOVIE_ID" type="id" />
     <item name="LIST_ITEM_ICON" type="id" />
-    <item name="TRAILER_ID" type="id" />
+    <item name="TRAILER_KEY" type="id" />
+    <item name="REVIEW_URL" type="id" />
     <item name="LIST_ITEM_TYPE" type="id" />
     <item name="LIST_ITEM_NAME" type="id" />
     <item name="LIST_ITEM_SIZE" type="id" />
     <item name="LIST_ITEM_THUMBNAIL" type="id" />
-    <item name="TRAILER_KEY" type="id" />
+    <item name="LIST_ITEM_OVERVIEW" type="id" />
+    <item name="LIST_ITEM_ORIGINAL_TITLE" type="id" />
+    <item name="LIST_ITEM_POSTER" type="id" />
+    <item name="LIST_ITEM_RELEASE_DATE" type="id" />
+    <item name="LIST_ITEM_VOTE_AVERAGE" type="id" />
+    <item name="LIST_ITEM_AUTHOR" type="id" />
+    <item name="LIST_ITEM_CONTENT" type="id" />
+    <item name="LIST_ITEM_URL" type="id" />
 </resources>
