--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,9 +9,13 @@
             android:id="@+id/action_sort_by_rating"
             android:orderInCategory="101"
             android:title="@string/action_sort_by_rating" />
+        <item
+            android:id="@+id/action_show_favorites"
+            android:orderInCategory="102"
+            android:title="@string/action_show_favorites" />
     </group>
     <item
         android:id="@+id/action_about"
-        android:orderInCategory="102"
+        android:orderInCategory="103"
         android:title="@string/action_about" />
 </menu>
