--- a/app/src/main/res/layout-sw600dp-land/fragment_movie_list.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_movie_list.xml
@@ -11,10 +11,10 @@
         android:layout_height="match_parent"
         android:columnWidth="@dimen/poster_width"
         android:gravity="center"
-        android:numColumns="2"
-        android:stretchMode="columnWidth"
         android:horizontalSpacing="5dp"
+        android:numColumns="2"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp" />
+        android:paddingRight="5dp"
+        android:stretchMode="columnWidth" />
 
 </FrameLayout>
