--- a/app/src/main/res/layout/list_row_movie_detail.xml
+++ b/app/src/main/res/layout/list_row_movie_detail.xml
@@ -3,18 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/original_title"
-        style="?android:attr/textAppearanceLarge"
+    <RelativeLayout
+        android:id="@+id/original_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textIsSelectable="true" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/original_title"
+            style="?android:attr/textAppearanceLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:textIsSelectable="true" />
+
+        <ImageView
+            android:id="@+id/star"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_star_rate" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/poster_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/original_title"
+        android:layout_below="@+id/original_title_layout"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal">
