--- a/app/src/main/res/layout/list_row_trailer.xml
+++ b/app/src/main/res/layout/list_row_trailer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left|top"
         android:layout_marginLeft="16dp"
+        android:layout_toRightOf="@+id/thumbnail"
         android:orientation="vertical">
 
         <LinearLayout
@@ -29,10 +30,10 @@
                 style="?android:attr/textAppearanceSmallInverse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
                 android:background="@color/bright_foreground_inverse_material_dark"
                 android:paddingLeft="3dp"
-                android:paddingRight="3dp"
-                android:layout_marginRight="5dp"/>
+                android:paddingRight="3dp" />
 
             <TextView
                 android:id="@+id/type"
@@ -50,4 +51,19 @@
 
     </LinearLayout>
 
-</LinearLayout>
+    <FrameLayout
+        android:id="@+id/share"
+        android:layout_width="48dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true">
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="top|right"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/ic_share" />
+
+    </FrameLayout>
+
+</RelativeLayout>
