--- a/app/src/main/res/values/tags.xml
+++ b/app/src/main/res/values/tags.xml
@@ -3,11 +3,16 @@
     <item name="MOVIE_ID" type="id" />
     <item name="LIST_ITEM_ICON" type="id" />
     <item name="TRAILER_KEY" type="id" />
+    <item name="FAVORITES_KEY" type="id" />
+    <item name="SHARE_KEY" type="id" />
+    <item name="SHARE_NAME" type="id" />
     <item name="REVIEW_URL" type="id" />
     <item name="LIST_ITEM_TYPE" type="id" />
     <item name="LIST_ITEM_NAME" type="id" />
     <item name="LIST_ITEM_SIZE" type="id" />
+    <item name="LIST_ITEM_STAR" type="id" />
     <item name="LIST_ITEM_THUMBNAIL" type="id" />
+    <item name="LIST_ITEM_SHARE" type="id" />
     <item name="LIST_ITEM_OVERVIEW" type="id" />
     <item name="LIST_ITEM_ORIGINAL_TITLE" type="id" />
     <item name="LIST_ITEM_POSTER" type="id" />
